deploy/dvp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bd-dvp-web-service
  namespace: default
spec:
  selector:
    app: bd-dvp-web
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 8001
