deploy/dvp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-dvp-web-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: osrsbotdetector.com
      http:
        paths:
          - path: /dvp/web(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bd-dvp-web-service
                port:
                  number: 8001
